--- a/src/index.html
+++ b/src/index.html
@@ -40,7 +40,7 @@
             <section>
               <h4>August</h4>
               <ul>
-                <li>SCP|Nemesi backend server development started. Tech stack: NodeJS, MongoDB. Hosted for free on cloud
+                <li>🎮 SCP|Nemesi backend server development started. Tech stack: NodeJS, MongoDB. Hosted for free on cloud
                   using Vercel and MongoDB Atlas</li>
               </ul>
             </section>
@@ -48,14 +48,14 @@
             <section>
               <h4>April</h4>
               <ul>
-                <li>New clothing creation pipeline for my game SCP|Nemesi, involving Marvelous Designer</li>
+                <li>🎮 New clothing creation pipeline for my game SCP|Nemesi, involving Marvelous Designer</li>
               </ul>
             </section>
 
             <section>
               <h4>March</h4>
               <ul>
-                <li>Scrapped the old characters I made for my game SCP|Nemesi in favor of new ones made using Character
+                <li>🎮 Scrapped the old characters I made for my game SCP|Nemesi in favor of new ones made using Character
                   Creator 3</li>
               </ul>
             </section>
@@ -68,14 +68,14 @@
             <section>
               <h4>October</h4>
               <ul>
-                <li><a href="https://drive.google.com/file/d/1SuqilRhjIhFCdVcjxaD8U7OfBMN6Y5Ae">QuestDropper Demo 0.1</a>, Quest 2 native VR game inspired by Minecraft Dropper. Dropper maps in Minecraft are all about falling down a level while avoiding blocks, in an attempt to reach the bottom without dying</li>
+                <li>🎮 <a href="https://drive.google.com/file/d/1SuqilRhjIhFCdVcjxaD8U7OfBMN6Y5Ae">QuestDropper Demo 0.1</a>, Quest 2 native VR game inspired by Minecraft Dropper. Dropper maps in Minecraft are all about falling down a level while avoiding blocks, in an attempt to reach the bottom without dying</li>
               </ul>
             </section>
 
             <section>
               <h4>January</h4>
               <ul>
-                <li>model-viewer.js and AR.js integration inside Angular, just a simple test for <a href="https://muni.social/">MUNI</a></li>
+                <li>💻 model-viewer.js and AR.js integration inside Angular, just a simple test for <a href="https://muni.social/">MUNI</a></li>
               </ul>
             </section>
 
@@ -87,9 +87,9 @@
             <section>
               <h4>June</h4>
               <ul>
-                <li>Development of <a href="https://muni.social/">MUNI</a> new frontend, made
+                <li>💻 Development of <a href="https://muni.social/">MUNI</a> new frontend, made
                   with Angular, started</li>
-                <li>CLiGL development completed and uploaded to a private git repo</li>
+                <li>💻 CLiGL development completed and uploaded to a private git repo</li>
               </ul>
             </section>
 
@@ -101,7 +101,7 @@
             <section>
               <h4>November</h4>
               <ul>
-                <li>CLiGL development started (Bachelor Thesis Projects), language used: Java</li>
+                <li>💻 CLiGL development started (Bachelor Thesis Projects), language used: Java</li>
               </ul>
             </section>
 
@@ -115,16 +115,16 @@
             <section>
               <h4>August</h4>
               <ul>
-                <li>SCP|Nemesi development started. It's a multiplayer horror game based on the <a
+                <li>🎮 SCP|Nemesi development started. It's a multiplayer horror game based on the <a
                     href="https://scp-wiki.wikidot.com/">SCP lore</a>, made with Unreal Engine 4. I used ZBrush to make the various 3D models</li>
-                <li>Nemesi development halted. It was a multiplayer horror game made with Unreal Engine 4. This project would eventually be the foundation of another game, SCP|Nemesi, almost like a spiritual successor</li>
+                <li>🎮 Nemesi development halted. It was a multiplayer horror game made with Unreal Engine 4. This project would eventually be the foundation of another game, SCP|Nemesi, almost like a spiritual successor</li>
               </ul>
             </section>
 
             <section>
               <h4>February</h4>
               <ul>
-                <li>Released my first single, <a href="https://open.spotify.com/album/7IXlQKCaiNnR366W0OvLNV">Rendezvous</a>, on Spotify, under a different artist name and an offical record label: <a href="https://ra.co/labels/14580">Nuit Blanche</a>. This instrumental track was the result of a Reddit monthly challenge called <a href="https://www.reddit.com/r/edmproduction/comments/79cd55/redmproduction_fictitious_genre_competition_12/">Fictitious genre competition</a>. The winner of the previous challenge would come up with an imaginary genre, based on some characteristics and features. Synthetic Cinema-Gaze was a blend of electronic film score and shoegaze music. This track was inspide by Hans Zimmer - Time and Rezzett. A <i>making of</i> is available <a href="https://www.youtube.com/watch?v=2L7_LpTwFws">here</a></li>
+                <li>🎵 Released my first single, <a href="https://open.spotify.com/album/7IXlQKCaiNnR366W0OvLNV">Rendezvous</a>, on Spotify, under a different artist name and an offical record label: <a href="https://ra.co/labels/14580">Nuit Blanche</a>. This instrumental track was the result of a Reddit monthly challenge called <a href="https://www.reddit.com/r/edmproduction/comments/79cd55/redmproduction_fictitious_genre_competition_12/">Fictitious genre competition</a>. The winner of the previous challenge would come up with an imaginary genre, based on some characteristics and features. Synthetic Cinema-Gaze was a blend of electronic film score and shoegaze music. This track was inspide by Hans Zimmer - Time and Rezzett. A <i>making of</i> is available <a href="https://www.youtube.com/watch?v=2L7_LpTwFws">here</a></li>
               </ul>
             </section>
 
@@ -136,14 +136,14 @@
             <section>
               <h4>July</h4>
               <ul>
-                <li>Released my first album on Spotify, <a href="https://open.spotify.com/album/0zdpRQnM6aHiuvNB9MsT8A">5 Week Challenge</a>, self-published. This album was inspired by a challenge by the same name: for 5 weeks, each day would be spent to make a track from start to finish. This album is a colletion of the resulting tracks</li>
+                <li>🎵 Released my first album on Spotify, <a href="https://open.spotify.com/album/0zdpRQnM6aHiuvNB9MsT8A">5 Week Challenge</a>, self-published. This album was inspired by a challenge by the same name: for 5 weeks, each day would be spent to make a track from start to finish. This album is a colletion of the resulting tracks</li>
               </ul>
             </section>
 
             <section>
               <h4>March</h4>
               <ul>
-                <li><a href="https://drive.google.com/file/d/1KvngrGdxcIcgdY_W0M58OuCc-fUX-1ZU/">Rainforest</a>, a survival game made with Unreal Engine 4. This project has later been cancelled and this is the most up-to-date version. It features the main map of the game: a tropical rainforest. I'm planning to resume the development of this game some time in the future, maybe as a VR game with new graphics and mechanics</li>
+                <li>🎮 <a href="https://drive.google.com/file/d/1KvngrGdxcIcgdY_W0M58OuCc-fUX-1ZU/">Rainforest</a>, a survival game made with Unreal Engine 4. This project has later been cancelled and this is the most up-to-date version. It features the main map of the game: a tropical rainforest. I'm planning to resume the development of this game some time in the future, maybe as a VR game with new graphics and mechanics</li>
               </ul>
             </section>
 
@@ -155,7 +155,7 @@
             <section>
               <h4>May</h4>
               <ul>
-                <li>Opened a <a href="https://www.youtube.com/channel/UCTYc0LaAwgze3f4qg7JVPEQ">YouTube channel</a> where I used to post my music, made using FL Studio. I would also livestream from time to time, witch are archived there for the time being</li>
+                <li>🎵 Opened a <a href="https://www.youtube.com/channel/UCTYc0LaAwgze3f4qg7JVPEQ">YouTube channel</a> where I used to post my music, made using FL Studio. I would also livestream from time to time, witch are archived there for the time being</li>
               </ul>
             </section>
 
