feat: add more music stuff

--- a/src/index.html
+++ b/src/index.html
@@ -40,7 +40,8 @@
             <section>
               <h4>August</h4>
               <ul>
-                <li>🎮 SCP|Nemesi backend server development started. Tech stack: NodeJS, MongoDB. Hosted for free on cloud
+                <li>🎮 SCP|Nemesi backend server development started. Tech stack: NodeJS, MongoDB. Hosted for free on
+                  cloud
                   using Vercel and MongoDB Atlas</li>
               </ul>
             </section>
@@ -55,7 +56,8 @@
             <section>
               <h4>March</h4>
               <ul>
-                <li>🎮 Scrapped the old characters I made for my game SCP|Nemesi in favor of new ones made using Character
+                <li>🎮 Scrapped the old characters I made for my game SCP|Nemesi in favor of new ones made using
+                  Character
                   Creator 3</li>
               </ul>
             </section>
@@ -68,14 +70,17 @@
             <section>
               <h4>October</h4>
               <ul>
-                <li>🎮 <a href="https://drive.google.com/file/d/1SuqilRhjIhFCdVcjxaD8U7OfBMN6Y5Ae">QuestDropper Demo 0.1</a>, Quest 2 native VR game inspired by Minecraft Dropper. Dropper maps in Minecraft are all about falling down a level while avoiding blocks, in an attempt to reach the bottom without dying</li>
+                <li>🎮 <a href="https://drive.google.com/file/d/1SuqilRhjIhFCdVcjxaD8U7OfBMN6Y5Ae">QuestDropper Demo
+                    0.1</a>, Quest 2 native VR game inspired by Minecraft Dropper. Dropper maps in Minecraft are all
+                  about falling down a level while avoiding blocks, in an attempt to reach the bottom without dying</li>
               </ul>
             </section>
 
             <section>
               <h4>January</h4>
               <ul>
-                <li>💻 model-viewer.js and AR.js integration inside Angular, just a simple test for <a href="https://muni.social/">MUNI</a></li>
+                <li>💻 model-viewer.js and AR.js integration inside Angular, just a simple test for <a
+                    href="https://muni.social/">MUNI</a></li>
               </ul>
             </section>
 
@@ -116,15 +121,70 @@
               <h4>August</h4>
               <ul>
                 <li>🎮 SCP|Nemesi development started. It's a multiplayer horror game based on the <a
-                    href="https://scp-wiki.wikidot.com/">SCP lore</a>, made with Unreal Engine 4. I used ZBrush to make the various 3D models</li>
-                <li>🎮 Nemesi development halted. It was a multiplayer horror game made with Unreal Engine 4. This project would eventually be the foundation of another game, SCP|Nemesi, almost like a spiritual successor</li>
+                    href="https://scp-wiki.wikidot.com/">SCP lore</a>, made with Unreal Engine 4. I used ZBrush to make
+                  the various 3D models</li>
+                <li>🎮 Nemesi development halted. It was a multiplayer horror game made with Unreal Engine 4. This
+                  project would eventually be the foundation of another game, SCP|Nemesi, almost like a spiritual
+                  successor</li>
+                <li>🎵 Uploaded a new track available <a href="https://youtu.be/2_GWVq0N2Ys">here</a> on my YouTube
+                  channel. This track was part of a Metapop competition called <i>Latroit Remix Essentials: Vol 1.</i>
+                  A sample pack was given by Grammy Award ™ winning remixer Latroit, free of charge to be remixed
+                </li>
+              </ul>
+            </section>
+
+            <section>
+              <h4>July</h4>
+              <ul>
+                <li>🎵 Uploaded new wip tracks on my <a
+                    href="https://www.youtube.com/channel/UCTYc0LaAwgze3f4qg7JVPEQ">YouTube channel</a></li>
+              </ul>
+            </section>
+
+            <section>
+              <h4>June</h4>
+              <ul>
+                <li>🎵 Uploaded new wip tracks on my <a
+                    href="https://www.youtube.com/channel/UCTYc0LaAwgze3f4qg7JVPEQ">YouTube channel</a></li>
+              </ul>
+            </section>
+
+            <section>
+              <h4>May</h4>
+              <ul>
+                <li>🎵 Uploaded new wip tracks on my <a
+                    href="https://www.youtube.com/channel/UCTYc0LaAwgze3f4qg7JVPEQ">YouTube channel</a></li>
+              </ul>
+            </section>
+
+            <section>
+              <h4>March</h4>
+              <ul>
+                <li>🎵 Uploaded a <a href="https://youtu.be/56mJiTa85lo"><i>Madeon - Beings Orchestral Remix</i></a> I
+                  made on my YouTube channel</li>
               </ul>
             </section>
 
             <section>
               <h4>February</h4>
               <ul>
-                <li>🎵 Released my first single, <a href="https://open.spotify.com/album/7IXlQKCaiNnR366W0OvLNV">Rendezvous</a>, on Spotify, under a different artist name and an offical record label: <a href="https://ra.co/labels/14580">Nuit Blanche</a>. This instrumental track was the result of a Reddit monthly challenge called <a href="https://www.reddit.com/r/edmproduction/comments/79cd55/redmproduction_fictitious_genre_competition_12/">Fictitious genre competition</a>. The winner of the previous challenge would come up with an imaginary genre, based on some characteristics and features. Synthetic Cinema-Gaze was a blend of electronic film score and shoegaze music. This track was inspide by Hans Zimmer - Time and Rezzett. A <i>making of</i> is available <a href="https://www.youtube.com/watch?v=2L7_LpTwFws">here</a></li>
+                <li>🎵 Released my first single, <a
+                    href="https://open.spotify.com/album/7IXlQKCaiNnR366W0OvLNV">Rendezvous</a>, on Spotify, under a
+                  different artist name and an offical record label: <a href="https://ra.co/labels/14580">Nuit
+                    Blanche</a>. This instrumental track was the result of a Reddit monthly challenge called <a
+                    href="https://www.reddit.com/r/edmproduction/comments/79cd55/redmproduction_fictitious_genre_competition_12/">Fictitious
+                    genre competition</a>. The winner of the previous challenge would come up with an imaginary genre,
+                  based on some characteristics and features. Synthetic Cinema-Gaze was a blend of electronic film score
+                  and shoegaze music. This track was inspide by Hans Zimmer - Time and Rezzett. A <i>making of</i> is
+                  available <a href="https://www.youtube.com/watch?v=2L7_LpTwFws">here</a></li>
+              </ul>
+            </section>
+
+            <section>
+              <h4>January</h4>
+              <ul>
+                <li>🎵 Uploaded new track preview on my <a
+                    href="https://www.youtube.com/channel/UCTYc0LaAwgze3f4qg7JVPEQ">YouTube channel</a></li>
               </ul>
             </section>
 
@@ -134,16 +194,79 @@
             <h3>2017</h3>
 
             <section>
+              <h4>December</h4>
+              <ul>
+                <li>🎵 Uploaded the soon to be released track <a
+                    href="https://open.spotify.com/album/7IXlQKCaiNnR366W0OvLNV">Rendezvous</a> on my <a
+                    href="https://www.youtube.com/channel/UCTYc0LaAwgze3f4qg7JVPEQ">YouTube channel</a></li>
+                <li>🎵 Also uploaded a <i>making of</i> <a href="https://www.youtube.com/watch?v=2L7_LpTwFws">here</a>
+                </li>
+              </ul>
+            </section>
+
+            <section>
+              <h4>November</h4>
+              <ul>
+                <li>🎵 Uploaded new music on my <a
+                    href="https://www.youtube.com/channel/UCTYc0LaAwgze3f4qg7JVPEQ">YouTube channel</a></li>
+              </ul>
+            </section>
+
+            <section>
+              <h4>August</h4>
+              <ul>
+                <li>🎵 Uploaded new music on my <a
+                    href="https://www.youtube.com/channel/UCTYc0LaAwgze3f4qg7JVPEQ">YouTube channel</a></li>
+              </ul>
+            </section>
+
+            <section>
               <h4>July</h4>
               <ul>
-                <li>🎵 Released my first album on Spotify, <a href="https://open.spotify.com/album/0zdpRQnM6aHiuvNB9MsT8A">5 Week Challenge</a>, self-published. This album was inspired by a challenge by the same name: for 5 weeks, each day would be spent to make a track from start to finish. This album is a colletion of the resulting tracks</li>
+                <li>🎵 Released my first album on Spotify, <a
+                    href="https://open.spotify.com/album/0zdpRQnM6aHiuvNB9MsT8A">5 Week Challenge</a>, self-published.
+                  This album was inspired by a challenge by the same name: for 5 weeks, each day would be spent to make
+                  a track from start to finish. This album is a colletion of the resulting tracks</li>
               </ul>
             </section>
 
             <section>
               <h4>March</h4>
               <ul>
-                <li>🎮 <a href="https://drive.google.com/file/d/1KvngrGdxcIcgdY_W0M58OuCc-fUX-1ZU/">Rainforest</a>, a survival game made with Unreal Engine 4. This project has later been cancelled and this is the most up-to-date version. It features the main map of the game: a tropical rainforest. I'm planning to resume the development of this game some time in the future, maybe as a VR game with new graphics and mechanics</li>
+                <li>🎮 <a href="https://drive.google.com/file/d/1KvngrGdxcIcgdY_W0M58OuCc-fUX-1ZU/">Rainforest</a>, a
+                  survival game made with Unreal Engine 4. This project has later been cancelled and this is the most
+                  up-to-date version. It features the main map of the game: a tropical rainforest. I'm planning to
+                  resume the development of this game some time in the future, maybe as a VR game with new graphics and
+                  mechanics</li>
+              </ul>
+            </section>
+
+          </section>
+
+          <section class="year">
+            <h3>2016</h3>
+
+            <section>
+              <h4>November</h4>
+              <ul>
+                <li>🎵 Uploaded new music on my <a
+                    href="https://www.youtube.com/channel/UCTYc0LaAwgze3f4qg7JVPEQ">YouTube channel</a></li>
+              </ul>
+            </section>
+
+            <section>
+              <h4>June</h4>
+              <ul>
+                <li>🎵 Uploaded new music on my <a
+                    href="https://www.youtube.com/channel/UCTYc0LaAwgze3f4qg7JVPEQ">YouTube channel</a></li>
+              </ul>
+            </section>
+
+            <section>
+              <h4>May</h4>
+              <ul>
+                <li>🎵 Uploaded new music on my <a
+                    href="https://www.youtube.com/channel/UCTYc0LaAwgze3f4qg7JVPEQ">YouTube channel</a></li>
               </ul>
             </section>
 
@@ -153,9 +276,19 @@
             <h3>2015</h3>
 
             <section>
+              <h4>October</h4>
+              <ul>
+                <li>🎵 Uploaded new music on my <a
+                    href="https://www.youtube.com/channel/UCTYc0LaAwgze3f4qg7JVPEQ">YouTube channel</a></li>
+              </ul>
+            </section>
+
+            <section>
               <h4>May</h4>
               <ul>
-                <li>🎵 Opened a <a href="https://www.youtube.com/channel/UCTYc0LaAwgze3f4qg7JVPEQ">YouTube channel</a> where I used to post my music, made using FL Studio. I would also livestream from time to time, witch are archived there for the time being</li>
+                <li>🎵 Opened a <a href="https://www.youtube.com/channel/UCTYc0LaAwgze3f4qg7JVPEQ">YouTube channel</a>
+                  where I used to post my music, made using FL Studio. I would also livestream from time to time, witch
+                  are archived there for the time being</li>
               </ul>
             </section>
 
@@ -173,3 +306,16 @@
 </body>
 
 </html>
+
+<!-- 
+Ho sviluppato anche dei piccoli progetti (POC di giochi) in VBA per Excel, hanno alcuni problemi di compatibilità con le versioni più recenti di Excel essendo piuttosto vecchi. 
+
+In questi anni ho comunque continuato ad usarlo per automazione ed elaborazione di dati, magari potrebbe tornarvi utile come conoscenza extra.
+
+Fino a qualche anno fa, prima che venisse deprecato, sviluppavo anche app native per Windows Phone 8 e Windows 10 Mobile in C#, ormai non ho più modo di mostrarvi nulla ma ho esperienza anche in quel linguaggio. -->
+
+<!-- no js -->
+<!-- https://www.youtube.com/watch?v=pDd4Wf8Ew-s -->
+
+<!-- with js, modal -->
+<!-- https://www.w3schools.com/howto/howto_css_modal_images.asp --> 
