feat: add xlsm games

--- a/src/index.html
+++ b/src/index.html
@@ -93,7 +93,7 @@
               <h4>June</h4>
               <ul>
                 <li>💻 Development of <a href="https://muni.social/">MUNI</a> new frontend, made
-                  with Angular, started</li>
+                  in Angular, started</li>
                 <li>💻 CLiGL development completed and uploaded to a private git repo</li>
               </ul>
             </section>
@@ -106,7 +106,10 @@
             <section>
               <h4>November</h4>
               <ul>
-                <li>💻 CLiGL development started (Bachelor Thesis Projects), language used: Java</li>
+                <li>💻 CLiGL development started (Bachelor Thesis Projects). CLiGL is a tool made in Java to draw graphs
+                  using the provided cli (command line interface). The user was also able to view the graph in real time
+                  and export it in various graphic formats, such as PNG and SVG, and other text formats for third party
+                  graphs editing software</li>
               </ul>
             </section>
 
@@ -118,14 +121,20 @@
             <h3>2018</h3>
 
             <section>
+              <h4>September</h4>
+              <ul>
+                <li>💻 Developed JDoom, a simple Java remake of the original Doom, as a project for an University exame
+                </li>
+              </ul>
+            </section>
+
+            <section>
               <h4>August</h4>
               <ul>
                 <li>🎮 SCP|Nemesi development started. It's a multiplayer horror game based on the <a
                     href="https://scp-wiki.wikidot.com/">SCP lore</a>, made with Unreal Engine 4. I used ZBrush to make
                   the various 3D models</li>
-                <li>🎮 Nemesi development halted. It was a multiplayer horror game made with Unreal Engine 4. This
-                  project would eventually be the foundation of another game, SCP|Nemesi, almost like a spiritual
-                  successor</li>
+                <li>🎮 ProjectNemesis development halted</li>
                 <li>🎵 Uploaded a new track available <a href="https://youtu.be/2_GWVq0N2Ys">here</a> on my YouTube
                   channel. This track was part of a Metapop competition called <i>Latroit Remix Essentials: Vol 1.</i>
                   A sample pack was given by Grammy Award ™ winning remixer Latroit, free of charge to be remixed
@@ -233,11 +242,25 @@
             <section>
               <h4>March</h4>
               <ul>
-                <li>🎮 <a href="https://drive.google.com/file/d/1KvngrGdxcIcgdY_W0M58OuCc-fUX-1ZU/">Rainforest</a>, a
+                <li>🎮 Released a private demo of <a
+                    href="https://drive.google.com/file/d/1KvngrGdxcIcgdY_W0M58OuCc-fUX-1ZU/">Rainforest</a>, a
                   survival game made with Unreal Engine 4. This project has later been cancelled and this is the most
                   up-to-date version. It features the main map of the game: a tropical rainforest. I'm planning to
                   resume the development of this game some time in the future, maybe as a VR game with new graphics and
                   mechanics</li>
+              </ul>
+            </section>
+
+            <section>
+              <h4>January</h4>
+              <ul>
+                <li>🎮 Developed a PSP homebrew game called <i>Lights and Shadow</i>. It was a top-down 2D RPG game
+                  inspired by the old Zelda games and by The Elder Scrolls V: Skyrim.
+                  The game was coded in Lua and run inside Lua Player, is a lua script player for the Sony PSP. The
+                  games used a custom game engine written by me. Because at the time I didn't have access to a PC to
+                  develop the game, all the coding, graphics and sound effects were made directly using the PSP, thanks
+                  to various homebrewes.
+                </li>
               </ul>
             </section>
 
@@ -247,13 +270,22 @@
             <h3>2016</h3>
 
             <section>
-              <h4>November</h4>
+              <!-- <h4>November</h4> -->
               <ul>
                 <li>🎵 Uploaded new music on my <a
                     href="https://www.youtube.com/channel/UCTYc0LaAwgze3f4qg7JVPEQ">YouTube channel</a></li>
               </ul>
             </section>
 
+            <section>
+              <h4>August</h4>
+              <ul>
+                <li>🎮 ProjectNemesis development started. Multiplayer horror game made with Unreal Engine 4. This
+                  project would eventually be the foundation of another game, SCP|Nemesi, almost like a spiritual
+                  successor</li>
+              </ul>
+            </section>
+            <!-- 
             <section>
               <h4>June</h4>
               <ul>
@@ -268,7 +300,7 @@
                 <li>🎵 Uploaded new music on my <a
                     href="https://www.youtube.com/channel/UCTYc0LaAwgze3f4qg7JVPEQ">YouTube channel</a></li>
               </ul>
-            </section>
+            </section> -->
 
           </section>
 
@@ -289,6 +321,55 @@
                 <li>🎵 Opened a <a href="https://www.youtube.com/channel/UCTYc0LaAwgze3f4qg7JVPEQ">YouTube channel</a>
                   where I used to post my music, made using FL Studio. I would also livestream from time to time, witch
                   are archived there for the time being</li>
+              </ul>
+            </section>
+
+          </section>
+
+          <section class="year">
+            <h3>2014</h3>
+
+            <section>
+              <h4>March</h4>
+              <ul>
+                <li>🎮 Developed a small POC for a top down 2D dungeon craw / sandbox game inspired by Minecraft, called
+                  <i>The Ender Pearl</i>.
+                  I decided to make it using VBA for Excel, as i was studying it for school homework at the time
+                </li>
+              </ul>
+            </section>
+
+          </section>
+
+          <section class="year">
+            <h3>2013</h3>
+
+            <section>
+              <h4>December</h4>
+              <ul>
+                <li>🎮 Remade a game called <i>Retro City Rampage</i> in Excel using VBA, because why not. This was just
+                  a little experiment I did in my free time, and not a complete recreation</li>
+              </ul>
+            </section>
+
+            <section>
+              <h4>November</h4>
+              <ul>
+                <li>🎮 Developed a small POC for a Real Time Strategy (RTS) game inspired by Age of Empire and Banished,
+                  called <i>EmpireCraft</i>.
+                  I decided to make it using VBA for Excel, as i was studying it for school homework at the time</li>
+              </ul>
+            </section>
+
+            <section>
+              <h4>April</h4>
+              <ul>
+                <li>🎮 Remade a game called <i>The sandbox</i> in Excel using VBA, because why not. In this 2D game,
+                  you play as God, mixing various elements and items to create your own world. The original game
+                  also featured a campaign.
+                  This was just a little experiment I did in my free time, and not a complete recreation. It
+                  features some materials and items from the original game, witch can be combined for different
+                  effects. I worked on this for a little over two months</li>
               </ul>
             </section>
 
@@ -318,4 +399,4 @@ Fino a qualche anno fa, prima che venisse deprecato, sviluppavo anche app native
 <!-- https://www.youtube.com/watch?v=pDd4Wf8Ew-s -->
 
 <!-- with js, modal -->
-<!-- https://www.w3schools.com/howto/howto_css_modal_images.asp --> 
+<!-- https://www.w3schools.com/howto/howto_css_modal_images.asp -->
