feat: add WP projects

--- a/src/index.html
+++ b/src/index.html
@@ -349,6 +349,15 @@
               <ul>
                 <li>🎮 Remade a game called <i>Retro City Rampage</i> in Excel using VBA, because why not. This was just
                   a little experiment I did in my free time, and not a complete recreation</li>
+
+                <li>🎮 Developed a Windows Phone game called Dungeon Fate. It was a top-down 2D dungeon crawler game,
+                  inspired by the original Zelda game and Minecraft. The game plays in a 3x3 grid, with each cell
+                  occupied by an entity (the player or an enemy), or an item (gold, potions, weapon, etc...). Each turn,
+                  the player would move to an adjacent cell, excecute an action (attack, pick up the item, and so on),
+                  then the AI would move. The game ended when the player's health reached zero.
+
+                </li>
+
               </ul>
             </section>
 
@@ -358,6 +367,38 @@
                 <li>🎮 Developed a small POC for a Real Time Strategy (RTS) game inspired by Age of Empire and Banished,
                   called <i>EmpireCraft</i>.
                   I decided to make it using VBA for Excel, as i was studying it for school homework at the time</li>
+              </ul>
+            </section>
+
+            <section>
+              <h4>August</h4>
+              <ul>
+                <li>🎮 Developed a small Windows Phone app to add folders to the home screen, as this functionality was
+                  not available yet</li>
+              </ul>
+            </section>
+
+            <section>
+              <h4>July</h4>
+              <ul>
+                <li>🎮 Remade a game called <i>Plague Inc.</i> for Windows Phone. <i>Plague Inc.</i> is a real-time
+                  strategy
+                  simulation video game, developed and published by Ndemic Creations. The player creates and evolves a
+                  pathogen to annihilate the human population with a deadly pandemic. At that time the game wasn't
+                  available for Windows Phone, and I decided to port it as I was also studying C# and WPF at that time.
+                  I abandoned this project after some time due to the lack of time.
+              </ul>
+            </section>
+
+            <section>
+              <h4>June</h4>
+              <ul>
+                <li>🎮 Remade a game called <i>Don't Starve</i> for Windows Phone.
+                  <i>Don't Starve</i> is a survival / action-adventure 2D game video game developed by Klei
+                  Entertainment.
+                  Much like Plague Inc., at that time the game wasn't available for Windows Phone, and I decided to port
+                  it as I was also studying C# and WPF at that time. I abandoned this project after some time due to the
+                  lack of time.
               </ul>
             </section>
 
