--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,10 @@
 <html>
 
 <head>
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no, minimal-ui">
+
   <link rel="stylesheet" href="style.css">
+  
 </head>
 
 <body>
@@ -23,7 +26,7 @@
           d="M46.11 27.44c.636-4.257-2.606-6.546-7.04-8.073l1.44-5.768-3.512-.876-1.4 5.616c-.923-.23-1.87-.447-2.813-.662l1.41-5.653-3.51-.875-1.438 5.766c-.764-.174-1.514-.346-2.242-.527l.004-.02-4.843-1.208-.934 3.75s2.605.597 2.55.634c1.422.355 1.68 1.296 1.636 2.042l-1.64 6.57c.1.026.226.062.366.118l-.37-.092-2.297 9.205c-.175.43-.616 1.08-1.61.833.035.05-2.552-.637-2.552-.637l-1.743 4.02 4.57 1.138c.85.213 1.682.436 2.502.646l-1.453 5.834 3.507.875 1.44-5.773c.958.26 1.888.5 2.798.726l-1.434 5.745 3.51.875 1.454-5.823c5.987 1.133 10.49.676 12.384-4.74 1.527-4.36-.076-6.874-3.226-8.514 2.294-.53 4.022-2.038 4.483-5.155zm-8.023 11.25c-1.085 4.36-8.426 2.003-10.806 1.412l1.93-7.73c2.38.595 10.01 1.77 8.877 6.318zm1.086-11.312c-.99 3.966-7.1 1.95-9.082 1.457l1.75-7.01c1.98.494 8.364 1.416 7.333 5.553z" />
       </svg> -->
       <h1>Alfredo Bellani</h1>
-      <h2>A timeline that shows my portfolio, from my early works all the way to present day.</h2>
+      <h2>A timeline that shows my portfolio, from the present day all the way to my early works.</h2>
     </div>
 
     <div class="item">
@@ -38,11 +41,17 @@
             <h3>2022</h3>
 
             <section>
+              <h4>October</h4>
+              <ul>
+                <li>📄 Started working on this portfolio!</li>
+              </ul>
+            </section>
+
+            <section>
               <h4>August</h4>
               <ul>
-                <li>🎮 SCP|Nemesi backend server development started. Tech stack: NodeJS, MongoDB. Hosted for free on
-                  cloud
-                  using Vercel and MongoDB Atlas</li>
+                <li>🎮 SCP|Nemesi backend server development started. Tech stack used: JS, NodeJS, Mongoose, ExpressJS, MongoDB. Hosted for free on
+                  the cloud using Vercel and MongoDB Atlas</li>
               </ul>
             </section>
 
@@ -71,7 +80,7 @@
               <h4>October</h4>
               <ul>
                 <li>🎮 <a href="https://drive.google.com/file/d/1SuqilRhjIhFCdVcjxaD8U7OfBMN6Y5Ae">QuestDropper Demo
-                    0.1</a>, Quest 2 native VR game inspired by Minecraft Dropper. Dropper maps in Minecraft are all
+                    0.1</a>, SteamVR game inspired by Minecraft Dropper. Dropper maps in Minecraft are all
                   about falling down a level while avoiding blocks, in an attempt to reach the bottom without dying</li>
               </ul>
             </section>
@@ -121,6 +130,13 @@
             <h3>2018</h3>
 
             <section>
+              <ul>
+                <li>🎵 Uploaded new work in progress tracks on my <a
+                    href="https://www.youtube.com/channel/UCTYc0LaAwgze3f4qg7JVPEQ">YouTube channel</a></li>
+              </ul>
+            </section>
+
+            <section>
               <h4>September</h4>
               <ul>
                 <li>💻 Developed JDoom, a simple Java remake of the original Doom, as a project for an University exame
@@ -141,7 +157,7 @@
                 </li>
               </ul>
             </section>
-
+<!-- 
             <section>
               <h4>July</h4>
               <ul>
@@ -156,15 +172,15 @@
                 <li>🎵 Uploaded new wip tracks on my <a
                     href="https://www.youtube.com/channel/UCTYc0LaAwgze3f4qg7JVPEQ">YouTube channel</a></li>
               </ul>
-            </section>
-
+            </section> -->
+<!-- 
             <section>
               <h4>May</h4>
               <ul>
-                <li>🎵 Uploaded new wip tracks on my <a
+                <li>🎵 Uploaded new work in progress tracks on my <a
                     href="https://www.youtube.com/channel/UCTYc0LaAwgze3f4qg7JVPEQ">YouTube channel</a></li>
               </ul>
-            </section>
+            </section> -->
 
             <section>
               <h4>March</h4>
@@ -188,14 +204,14 @@
                   available <a href="https://www.youtube.com/watch?v=2L7_LpTwFws">here</a></li>
               </ul>
             </section>
-
+<!-- 
             <section>
               <h4>January</h4>
               <ul>
-                <li>🎵 Uploaded new track preview on my <a
+                <li>🎵 Uploaded new track previews on my <a
                     href="https://www.youtube.com/channel/UCTYc0LaAwgze3f4qg7JVPEQ">YouTube channel</a></li>
               </ul>
-            </section>
+            </section> -->
 
           </section>
 
@@ -256,7 +272,7 @@
               <ul>
                 <li>🎮 Developed a PSP homebrew game called <i>Lights and Shadow</i>. It was a top-down 2D RPG game
                   inspired by the old Zelda games and by The Elder Scrolls V: Skyrim.
-                  The game was coded in Lua and run inside Lua Player, is a lua script player for the Sony PSP. The
+                  The game was coded in Lua and run inside Lua Player, a lua script player for the Sony PSP. The
                   games used a custom game engine written by me. Because at the time I didn't have access to a PC to
                   develop the game, all the coding, graphics and sound effects were made directly using the PSP, thanks
                   to various homebrewes.
@@ -386,7 +402,7 @@
                   simulation video game, developed and published by Ndemic Creations. The player creates and evolves a
                   pathogen to annihilate the human population with a deadly pandemic. At that time the game wasn't
                   available for Windows Phone, and I decided to port it as I was also studying C# and WPF at that time.
-                  I abandoned this project after some time due to the lack of time.
+                  I abandoned this project after some time due to the lack of time
               </ul>
             </section>
 
@@ -398,7 +414,7 @@
                   Entertainment.
                   Much like Plague Inc., at that time the game wasn't available for Windows Phone, and I decided to port
                   it as I was also studying C# and WPF at that time. I abandoned this project after some time due to the
-                  lack of time.
+                  lack of time
               </ul>
             </section>
 
@@ -428,13 +444,6 @@
 </body>
 
 </html>
-
-<!-- 
-Ho sviluppato anche dei piccoli progetti (POC di giochi) in VBA per Excel, hanno alcuni problemi di compatibilità con le versioni più recenti di Excel essendo piuttosto vecchi. 
-
-In questi anni ho comunque continuato ad usarlo per automazione ed elaborazione di dati, magari potrebbe tornarvi utile come conoscenza extra.
-
-Fino a qualche anno fa, prima che venisse deprecato, sviluppavo anche app native per Windows Phone 8 e Windows 10 Mobile in C#, ormai non ho più modo di mostrarvi nulla ma ho esperienza anche in quel linguaggio. -->
 
 <!-- no js -->
 <!-- https://www.youtube.com/watch?v=pDd4Wf8Ew-s -->
