--- a/src/index.html
+++ b/src/index.html
@@ -2,13 +2,15 @@
 <html>
 
 <head>
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no, minimal-ui">
+  <meta name="viewport"
+    content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no, minimal-ui">
 
   <link rel="stylesheet" href="style.css">
 
   <link rel="stylesheet" href="style-gallery.css">
-
   
+  <link rel="stylesheet" href="style-modal.css">
+
 </head>
 
 <body>
@@ -53,7 +55,8 @@
             <section>
               <h4>August</h4>
               <ul>
-                <li>🎮 SCP|Nemesi backend server development started. Tech stack used: JavaScript, NodeJS, Mongoose, ExpressJS, MongoDB. Hosted for free on
+                <li>🎮 SCP|Nemesi backend server development started. Tech stack used: JavaScript, NodeJS, Mongoose,
+                  ExpressJS, MongoDB. Hosted for free on
                   the cloud using Vercel and MongoDB Atlas</li>
               </ul>
             </section>
@@ -160,7 +163,7 @@
                 </li>
               </ul>
             </section>
-<!-- 
+            <!-- 
             <section>
               <h4>July</h4>
               <ul>
@@ -176,7 +179,7 @@
                     href="https://www.youtube.com/channel/UCTYc0LaAwgze3f4qg7JVPEQ">YouTube channel</a></li>
               </ul>
             </section> -->
-<!-- 
+            <!-- 
             <section>
               <h4>May</h4>
               <ul>
@@ -207,7 +210,7 @@
                   available <a href="https://www.youtube.com/watch?v=2L7_LpTwFws">here</a></li>
               </ul>
             </section>
-<!-- 
+            <!-- 
             <section>
               <h4>January</h4>
               <ul>
@@ -431,77 +434,77 @@
                   features some materials and items from the original game, witch can be combined for different
                   effects. I worked on this for a little over two months</li>
 
-                  <div class="grid-container">
-                    <div>
-                        <img class='grid-item'
-                            src='https://images.unsplash.com/photo-1544568100-847a948585b9?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=400&fit=max&ixid=eyJhcHBfaWQiOjE0NTg5fQ'
-                            alt=''>
-                        <!-- <p>"I'm so happy today!"</p> -->
-                    </div>
-                    <div>
-                        <img class='grid-item'
-                            src='https://images.unsplash.com/photo-1517423440428-a5a00ad493e8?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=400&fit=max&ixid=eyJhcHBfaWQiOjE0NTg5fQ'
-                            alt=''>
-                        <p>"I see those nugs."</p>
-                    </div>
-                    <div>
-                        <img class='grid-item'
-                            src='https://images.unsplash.com/photo-1510771463146-e89e6e86560e?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=400&fit=max&ixid=eyJhcHBfaWQiOjE0NTg5fQ'
-                            alt=''>
-                        <p>"I love you so much!"</p>
-                    </div>
-                    <div>
-                        <img class='grid-item'
-                            src='https://images.unsplash.com/photo-1507146426996-ef05306b995a?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=400&fit=max&ixid=eyJhcHBfaWQiOjE0NTg5fQ'
-                            alt=''>
-                        <p>"I'm the baby of the house!"</p>
-                    </div>
-                    <div>
-                        <img class='grid-item'
-                            src='https://images.unsplash.com/photo-1535930891776-0c2dfb7fda1a?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=400&fit=max&ixid=eyJhcHBfaWQiOjE0NTg5fQ'
-                            alt=''>
-                        <p>"We can't afford a cat!"</p>
-                    </div>
-                    <div>
-                        <img class='grid-item'
-                            src='https://images.unsplash.com/photo-1530281700549-e82e7bf110d6?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=400&fit=max&ixid=eyJhcHBfaWQiOjE0NTg5fQ'
-                            alt=''>
-                        <p>"Are you gunna throw the ball?"</p>
-                    </div>
-                    <div>
-                        <img class='grid-item'
-                            src='https://images.unsplash.com/photo-1548199973-03cce0bbc87b?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=400&fit=max&ixid=eyJhcHBfaWQiOjE0NTg5fQ'
-                            alt=''>
-                        <p>"C'mon friend!"</p>
-                    </div>
-                    <div>
-                        <img class='grid-item'
-                            src='https://images.unsplash.com/photo-1552053831-71594a27632d?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=400&fit=max&ixid=eyJhcHBfaWQiOjE0NTg5fQ'
-                            alt=''>
-                        <p>"A rose for mommy!"</p>
-                    </div>
-                    <div>
-                        <img class='grid-item'
-                            src='https://images.unsplash.com/photo-1518717758536-85ae29035b6d?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=400&fit=max&ixid=eyJhcHBfaWQiOjE0NTg5fQ'
-                            alt=''>
-                        <p>"You gunna finish that?"</p>
-                    </div>
-                    <div>
-                        <img class='grid-item'
-                            src='https://images.unsplash.com/photo-1535930891776-0c2dfb7fda1a?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=400&fit=max&ixid=eyJhcHBfaWQiOjE0NTg5fQ'
-                            alt=''>
-                        <p>"We can't afford a cat!"</p>
-                    </div>
-                    <div>
-                        <img class='grid-item'
-                            src='https://images.unsplash.com/photo-1504595403659-9088ce801e29?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=400&fit=max&ixid=eyJhcHBfaWQiOjE0NTg5fQ'
-                            alt=''>
-                        <p>"Dis my fren!"</p>
-                    </div>
+                <div class="grid-container">
+                  <div>
+                    <img class='grid-item'
+                      src='https://images.unsplash.com/photo-1544568100-847a948585b9?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=400&fit=max&ixid=eyJhcHBfaWQiOjE0NTg5fQ'
+                      alt=''>
+                    <!-- <p>"I'm so happy today!"</p> -->
+                  </div>
+                  <div>
+                    <img class='grid-item'
+                      src='https://images.unsplash.com/photo-1517423440428-a5a00ad493e8?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=400&fit=max&ixid=eyJhcHBfaWQiOjE0NTg5fQ'
+                      alt=''>
+                    <p>"I see those nugs."</p>
+                  </div>
+                  <div>
+                    <img class='grid-item'
+                      src='https://images.unsplash.com/photo-1510771463146-e89e6e86560e?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=400&fit=max&ixid=eyJhcHBfaWQiOjE0NTg5fQ'
+                      alt=''>
+                    <p>"I love you so much!"</p>
+                  </div>
+                  <div>
+                    <img class='grid-item'
+                      src='https://images.unsplash.com/photo-1507146426996-ef05306b995a?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=400&fit=max&ixid=eyJhcHBfaWQiOjE0NTg5fQ'
+                      alt=''>
+                    <p>"I'm the baby of the house!"</p>
+                  </div>
+                  <div>
+                    <img class='grid-item'
+                      src='https://images.unsplash.com/photo-1535930891776-0c2dfb7fda1a?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=400&fit=max&ixid=eyJhcHBfaWQiOjE0NTg5fQ'
+                      alt=''>
+                    <p>"We can't afford a cat!"</p>
+                  </div>
+                  <div>
+                    <img class='grid-item'
+                      src='https://images.unsplash.com/photo-1530281700549-e82e7bf110d6?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=400&fit=max&ixid=eyJhcHBfaWQiOjE0NTg5fQ'
+                      alt=''>
+                    <p>"Are you gunna throw the ball?"</p>
+                  </div>
+                  <div>
+                    <img class='grid-item'
+                      src='https://images.unsplash.com/photo-1548199973-03cce0bbc87b?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=400&fit=max&ixid=eyJhcHBfaWQiOjE0NTg5fQ'
+                      alt=''>
+                    <p>"C'mon friend!"</p>
+                  </div>
+                  <div>
+                    <img class='grid-item'
+                      src='https://images.unsplash.com/photo-1552053831-71594a27632d?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=400&fit=max&ixid=eyJhcHBfaWQiOjE0NTg5fQ'
+                      alt=''>
+                    <p>"A rose for mommy!"</p>
+                  </div>
+                  <div>
+                    <img class='grid-item'
+                      src='https://images.unsplash.com/photo-1518717758536-85ae29035b6d?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=400&fit=max&ixid=eyJhcHBfaWQiOjE0NTg5fQ'
+                      alt=''>
+                    <p>"You gunna finish that?"</p>
+                  </div>
+                  <div>
+                    <img class='grid-item'
+                      src='https://images.unsplash.com/photo-1535930891776-0c2dfb7fda1a?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=400&fit=max&ixid=eyJhcHBfaWQiOjE0NTg5fQ'
+                      alt=''>
+                    <p>"We can't afford a cat!"</p>
+                  </div>
+                  <div>
+                    <img class='grid-item'
+                      src='https://images.unsplash.com/photo-1504595403659-9088ce801e29?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=400&fit=max&ixid=eyJhcHBfaWQiOjE0NTg5fQ'
+                      alt=''>
+                    <p>"Dis my fren!"</p>
+                  </div>
                 </div>
               </ul>
 
-              
+
             </section>
 
           </section>
@@ -514,8 +517,24 @@
     </div>
   </div>
 
+  <!-- The Modal -->
+  <div id="myModal" class="modal">
+
+    <!-- The Close Button -->
+    <span class="close">&times;</span>
+
+    <!-- Modal Content (The Image) -->
+    <img class="modal-content" id="img01">
+
+    <!-- Modal Caption (Image Text) -->
+    <div id="caption"></div>
+  </div>
 
 </body>
+
+
+<script src="script.js"></script>
+
 
 </html>
 
