feat: add some photos

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="style.css">
 
   <link rel="stylesheet" href="style-gallery.css">
-  
+
   <link rel="stylesheet" href="style-modal.css">
 
 </head>
@@ -88,6 +88,16 @@
                 <li>🎮 <a href="https://drive.google.com/file/d/1SuqilRhjIhFCdVcjxaD8U7OfBMN6Y5Ae">QuestDropper Demo
                     0.1</a>, SteamVR game inspired by Minecraft Dropper. Dropper maps in Minecraft are all
                   about falling down a level while avoiding blocks, in an attempt to reach the bottom without dying</li>
+
+                <div class="grid-container" style="columns: 1 100px;">
+                  <div>
+                    <img class='grid-item' src='./assets/images/QuestDropper/HighresScreenshot00002.png' alt=''>
+                  </div>
+                  <div>
+                    <img class='grid-item' src='./assets/images/QuestDropper/HighresScreenshot00003.png' alt=''>
+                  </div>
+                </div>
+
               </ul>
             </section>
 
@@ -96,6 +106,18 @@
               <ul>
                 <li>💻 model-viewer.js and AR.js integration inside Angular, just a simple test for <a
                     href="https://muni.social/">MUNI</a></li>
+
+                <div class="grid-container" style="columns: 2 100px;">
+                  <div>
+                    <img class='grid-item' src='./assets/images/ModelViewer/1633099680645.jpg' alt=''>
+                  </div>
+                  <div>
+                    <img class='grid-item' src='./assets/images/ModelViewer/1633099680655.jpg' alt=''>
+                  </div>
+                  <div>
+                    <img class='grid-item' src='./assets/images/ModelViewer/1633099680663.jpg' alt=''>
+                  </div>
+
               </ul>
             </section>
 
@@ -163,30 +185,6 @@
                 </li>
               </ul>
             </section>
-            <!-- 
-            <section>
-              <h4>July</h4>
-              <ul>
-                <li>🎵 Uploaded new wip tracks on my <a
-                    href="https://www.youtube.com/channel/UCTYc0LaAwgze3f4qg7JVPEQ">YouTube channel</a></li>
-              </ul>
-            </section>
-
-            <section>
-              <h4>June</h4>
-              <ul>
-                <li>🎵 Uploaded new wip tracks on my <a
-                    href="https://www.youtube.com/channel/UCTYc0LaAwgze3f4qg7JVPEQ">YouTube channel</a></li>
-              </ul>
-            </section> -->
-            <!-- 
-            <section>
-              <h4>May</h4>
-              <ul>
-                <li>🎵 Uploaded new work in progress tracks on my <a
-                    href="https://www.youtube.com/channel/UCTYc0LaAwgze3f4qg7JVPEQ">YouTube channel</a></li>
-              </ul>
-            </section> -->
 
             <section>
               <h4>March</h4>
@@ -210,14 +208,6 @@
                   available <a href="https://www.youtube.com/watch?v=2L7_LpTwFws">here</a></li>
               </ul>
             </section>
-            <!-- 
-            <section>
-              <h4>January</h4>
-              <ul>
-                <li>🎵 Uploaded new track previews on my <a
-                    href="https://www.youtube.com/channel/UCTYc0LaAwgze3f4qg7JVPEQ">YouTube channel</a></li>
-              </ul>
-            </section> -->
 
           </section>
 
@@ -307,22 +297,6 @@
                   successor</li>
               </ul>
             </section>
-            <!-- 
-            <section>
-              <h4>June</h4>
-              <ul>
-                <li>🎵 Uploaded new music on my <a
-                    href="https://www.youtube.com/channel/UCTYc0LaAwgze3f4qg7JVPEQ">YouTube channel</a></li>
-              </ul>
-            </section>
-
-            <section>
-              <h4>May</h4>
-              <ul>
-                <li>🎵 Uploaded new music on my <a
-                    href="https://www.youtube.com/channel/UCTYc0LaAwgze3f4qg7JVPEQ">YouTube channel</a></li>
-              </ul>
-            </section> -->
 
           </section>
 
@@ -537,9 +511,3 @@
 
 
 </html>
-
-<!-- no js -->
-<!-- https://www.youtube.com/watch?v=pDd4Wf8Ew-s -->
-
-<!-- with js, modal -->
-<!-- https://www.w3schools.com/howto/howto_css_modal_images.asp -->
