--- a/index.html
+++ b/index.html
@@ -117,6 +117,7 @@
                   <div>
                     <img class='grid-item' src='./assets/images/ModelViewer/1633099680663.jpg' alt=''>
                   </div>
+                </div>
 
               </ul>
             </section>
@@ -131,6 +132,53 @@
               <ul>
                 <li>💻 Development of <a href="https://muni.social/">MUNI</a> new frontend, made
                   in Angular, started</li>
+
+                <div class="grid-container" style="columns: 2 100px;">
+                  <div>
+                    <img class='grid-item' src='./assets/images/MUNI/192.168.1.111_4200_anima(iPhone X).png' alt=''>
+                  </div>
+                  <div>
+                    <img class='grid-item' src='./assets/images/MUNI/192.168.1.111_4200_home(iPhone X) (1).png' alt=''>
+                  </div>
+                  <div>
+                    <img class='grid-item' src='./assets/images/MUNI/192.168.1.111_4200_soul(iPhone X) (8).png' alt=''>
+                  </div>
+                  <div>
+                    <img class='grid-item' src='./assets/images/MUNI/192.168.1.111_4200_soul(mi9 lite) (1).png' alt=''>
+                  </div>
+                  <div>
+                    <img class='grid-item'
+                      src='./assets/images/MUNI/192.168.1.111_4200_soul_0n9prqzemtmwcr62pumta6izz(mi9 lite).png' alt=''>
+                  </div>
+                  <div>
+                    <img class='grid-item' src='./assets/images/MUNI/192.168.1.111_4200_soul_elcmish(mi9 lite).png'
+                      alt=''>
+                  </div>
+                  <div>
+                    <img class='grid-item' src='./assets/images/MUNI/192.168.1.111_4200_vibes(mi9 lite) (5).png' alt=''>
+                  </div>
+                  <div>
+                    <img class='grid-item' src='./assets/images/MUNI/192.168.1.111_4200_vibestest(mi9 lite).png' alt=''>
+                  </div>
+                  <div>
+                    <img class='grid-item' src='./assets/images/MUNI/44.235.69.217_soul(mi9 lite) (1).png' alt=''>
+                  </div>
+                  <div>
+                    <img class='grid-item' src='./assets/images/MUNI/44.235.69.217_soul(mi9 lite) (11).png' alt=''>
+                  </div>
+                  <div>
+                    <img class='grid-item' src='./assets/images/MUNI/44.235.69.217_soul(mi9 lite).png' alt=''>
+                  </div>
+                  <div>
+                    <img class='grid-item' src='./assets/images/MUNI/192.168.1.111_4200_vibestest(mi9 lite) (1).png'
+                      alt=''>
+                  </div>
+                  <div>
+                    <img class='grid-item' src='./assets/images/MUNI/44.235.69.217_vibes(mi9 lite).png' alt=''>
+                  </div>
+
+                </div>
+
                 <li>💻 CLiGL development completed and uploaded to a private git repo</li>
               </ul>
             </section>
@@ -295,6 +343,24 @@
                 <li>🎮 ProjectNemesis development started. Multiplayer horror game made with Unreal Engine 4. This
                   project would eventually be the foundation of another game, SCP|Nemesi, almost like a spiritual
                   successor</li>
+
+                  <div class="grid-container" style="columns: 5 100px;">
+                    <div>
+                      <img class='grid-item' src='./assets/images/ProjectNemesis/HighresScreenshot00000.png' alt=''>
+                    </div>
+                    <div>
+                      <img class='grid-item' src='./assets/images/ProjectNemesis/HighresScreenshot00001.png' alt=''>
+                    </div>
+                    <div>
+                      <img class='grid-item' src='./assets/images/ProjectNemesis/ScreenShot00004.png' alt=''>
+                    </div>
+                    <div>
+                      <img class='grid-item' src='./assets/images/ProjectNemesis/ScreenShot00006.png' alt=''>
+                    </div>
+                    <div>
+                      <img class='grid-item' src='./assets/images/ProjectNemesis/ScreenShot00008.png' alt=''>
+                    </div>
+
               </ul>
             </section>
 
