feat: scp173 new render

--- a/index.html
+++ b/index.html
@@ -53,6 +53,20 @@
             </section>
 
             <section>
+              <h4>September</h4>
+              <ul>
+                <li>🎮 Remade the 3D Model for SCP-173, used in my game SCP|Nemesi</li>
+
+                <div class="grid-container" style="columns: 1 100px;">
+                  <div>
+                    <img class='grid-item' src='./assets/images/SCPNemesi/SCP173_2uSfYgc-_2.png' alt=''>
+                  </div>
+                </div>
+
+              </ul>
+            </section>
+
+            <section>
               <h4>August</h4>
               <ul>
                 <li>🎮 SCP|Nemesi backend server development started. Tech stack used: JavaScript, NodeJS, Mongoose,
@@ -109,13 +123,13 @@
 
                 <div class="grid-container" style="columns: 2 100px;">
                   <div>
+                    <img class='grid-item' src='./assets/images/ModelViewer/1633099680663.jpg' alt=''>
+                  </div>
+                  <div>
                     <img class='grid-item' src='./assets/images/ModelViewer/1633099680645.jpg' alt=''>
                   </div>
                   <div>
                     <img class='grid-item' src='./assets/images/ModelViewer/1633099680655.jpg' alt=''>
-                  </div>
-                  <div>
-                    <img class='grid-item' src='./assets/images/ModelViewer/1633099680663.jpg' alt=''>
                   </div>
                 </div>
 
@@ -344,7 +358,7 @@
                   project would eventually be the foundation of another game, SCP|Nemesi, almost like a spiritual
                   successor</li>
 
-                <div class="grid-container" style="columns: 5 100px;">
+                <div class="grid-container" style="columns: 2 100px;">
                   <div>
                     <img class='grid-item' src='./assets/images/ProjectNemesis/HighresScreenshot00000.png' alt=''>
                   </div>
@@ -372,7 +386,7 @@
             <section>
               <h4>October</h4>
               <ul>
-                <li>🎵 Uploaded new music on my <a
+                <li>🎵 Uploaded my first tracks on my <a
                     href="https://www.youtube.com/channel/UCTYc0LaAwgze3f4qg7JVPEQ">YouTube channel</a></li>
               </ul>
             </section>
@@ -401,9 +415,10 @@
             <section>
               <h4>March</h4>
               <ul>
-                <li>🎮 Developed a small POC for a top down 2D dungeon craw / sandbox game inspired by Minecraft, called
+                <li>🎮 Developed a small POC for a top down 2D dungeon crawler / sandbox game inspired by Minecraft,
+                  called
                   <i>The Ender Pearl</i>.
-                  I decided to make it using VBA for Excel, as i was studying it for school homework at the time
+                  I decided to make it using VBA for Excel, as i was studying it for my school homework at the time
                 </li>
               </ul>
             </section>
