featL latroit remix

--- a/index.html
+++ b/index.html
@@ -245,6 +245,13 @@
                   channel. This track was part of a Metapop competition called <i>Latroit Remix Essentials: Vol 1.</i>
                   A sample pack was given by Grammy Award ™ winning remixer Latroit, free of charge to be remixed
                 </li>
+
+                <div class="grid-container" style="columns: 1 100px;">
+                  <div>
+                    <img class='grid-item' src='./assets/images/LatroitRemix/maxresdefault.jpg' alt=''>
+                  </div>
+                </div>
+
               </ul>
             </section>
 
